--- a/public/src/components/Contacts.css
+++ b/public/src/components/Contacts.css
@@ -26,6 +26,11 @@
   gap: 0.8rem;
   &::-webkit-scrollbar {
     width: 0.2rem;
+    &::-ms-thumb {
+      background-color: #ffffff39;
+      width: 0.1rem;
+      border-radius: 1rem;
+    }
   }
   .contact {
     background-color: rgba(255, 255, 255, 0.204);
@@ -38,6 +43,9 @@
 
     align-items: center;
     gap: 1rem;
+    @media screen and (max-width : 768px) {
+      gap: 0.2rem;      
+    }
     transition: 0.5s ease-in-out;
     .avatar {
       img {
@@ -76,6 +84,11 @@
 @media screen and (max-width: 768px) {
   .current-user {
     gap: 1rem;
+    .avatar{
+      img{
+        height: 2rem;
+      }
+    }
   }
   .username {
     h2 {
@@ -89,6 +102,19 @@
   }
 }
 @media screen and (max-width: 425px) {
+  .Contact_container{
+
+    .brand{
+      
+      img {
+        height: 1.5rem;
+      }
+      gap: 0.2rem;
+      h3{
+        font-size: 0.6rem;
+      }
+    }
+  }
   .contacts {
     .contact {
       flex-direction: column;
