--- a/public/src/components/ChatContainer.css
+++ b/public/src/components/ChatContainer.css
@@ -1,69 +1,68 @@
-.chat_container{
-    padding-top: 1rem;
-    display: grid;
-    grid-template-rows: 10% 80% 10%;
-
-    .chat-header{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0.2rem;
-        .user_details{
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            .avatar{
-                img{
-                    height: 3rem;
-                }
-            }
-            .username{
-                h3{
-                    color: white;
-                }
-            }
+.chat-container {
+ 
+  display: grid;
+  grid-template-rows: 10% 80% 10%;
+  gap: 0.1rem;
+  overflow: hidden;
+ 
+  .chat-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    .user-details {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      .avatar {
+        img {
+          height: 2.4rem;
         }
+      }
+      .username {
+        h3 {
+          color: white;
+        }
+      }
     }
-}
-
-.chat-messages{
+  }
+  .chat-messages {
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     overflow: auto;
-    &::-webkit-scrollbar{
-        width: 0.2rem;
-        &::-ms-thumb{
-            background-color: #ffffff39;
-            width: 0.1rem;
-            border-radius: 1rem;
-
-        }
+    &::-webkit-scrollbar {
+      width: 0.2rem;
+      &::-ms-thumb {
+        background-color: #ffffff39;
+        width: 0.1rem;
+        border-radius: 1rem;
+      }
     }
-    .message{
-        display: flex;
-        align-items: center;
-        .content{
-            max-width: 40%;
-            overflow-wrap: break-word;
-            padding: 1rem;
-            font-size: 1rem;
-            border-radius: 1rem;
-            color: #d1d1d1;
-           
-        }
+    .message {
+      display: flex;
+      align-items: center;
+      .content {
+        max-width: 40%;
+        overflow-wrap: break-word;
+        padding: 1rem;
+        font-size: 1rem;
+        border-radius: 1rem;
+        color: #d1d1d1;
+      }
     }
-    .sended{
-        justify-content: flex-end;
-        .content{
-            background-color: #4f04ff21;
-        }
+    .sended {
+      justify-content: flex-end;
+      .content {
+        background-color: #4f04ff21;
+      }
     }
-    .recieved{
-        justify-content: flex-start;
-        .content{
-            background-color: #9900ff20;
-        }
+    .recieved {
+      justify-content: flex-start;
+      .content {
+        background-color: #9900ff20;
+      }
     }
+  }
 }
