--- a/public/src/components/ChatInput.css
+++ b/public/src/components/ChatInput.css
@@ -3,15 +3,18 @@
   grid-template-columns: 5% 95%;
   align-items: center;
   background-color: #080420;
-  padding: 0.2rem;
+  padding: 0 2rem;
   padding-bottom: 0.3rem;
-
-  .button-container {
+  @media screen and (max-width: 768px) {
+    padding: 0rem;
+    grid-template-columns: 8% 92%;
+    gap: 0.1rem;
+  }
+  .button_container {
     display: flex;
     align-items: center;
     color: white;
     gap: 1rem;
-
     .emoji {
       margin-left: 0.2rem;
       position: relative;
@@ -19,35 +22,50 @@
         font-size: 1.5rem;
         color: #ffff00c8;
         cursor: pointer;
-        
       }
+      
       .emoji-picker-react {
         position: absolute;
         top: -350px;
         background-color: #080420;
         box-shadow: 0 5px 10px #9a86f3;
         border-color: #9a86f3;
-        .emoji-scroll-wrapper::-webkit-scrollbar{
-            background-color: #080420;
-            width: 5px;
-            &-thumb{
-                background-color: #9186f3;
-            }
+
+        .emoji-scroll-wrapper::-webkit-scrollbar {
+          background-color: #080420;
+          width: 5px;
+          &::-ms-thumb{
+            background-color: #9a86f3;
+          }
+          
         }
-        .emoji-categories{
-            button{
-                filter: contrast(0);
-            }
+        .emoji-categories {
+          button {
+            filter: contrast(0);
+          }
         }
-        .emoji-search{
-            background-color: transparent;
-            border-color: #9186f3;
+        .emoji-search {
+          background-color: transparent;
+          border-color: #9186f3;
         }
-        .emoji-group::before{
-            background-color: #080420;
+        .emoji-group::before {
+          background-color: #080420;
+        }
+      }
+      @media screen and (max-width: 768px) {
+        margin-left: 0.3rem;
+        svg {
+          font-size: 1.4rem;
+        }
+      }
+      @media screen  and (max-width: 425px) {
+        margin-left: 0.3rem;
+        svg {
+          font-size: 1rem;
         }
       }
     }
+    
   }
   .input-container {
     width: 100%;
@@ -57,6 +75,9 @@
     justify-content: center;
     gap: 2rem;
     background-color: #ffffff34;
+    @media screen and (max-width: 768px) {
+      gap: 1rem;
+    }
     input {
       width: 90%;
       height: 60%;
@@ -65,7 +86,10 @@
       border: none;
       padding-left: 1rem;
       font-size: 1.2rem;
-
+      @media screen and (max-width: 768px) {
+        font-size: 1rem;
+        padding-left: 0.7rem;
+      }
       &::selection {
         background-color: #9a86f3;
       }
@@ -84,6 +108,13 @@
       svg {
         font-size: 2rem;
         color: white;
+      }
+      @media screen and (max-width: 768px) {
+        padding: 0.4rem 0.8rem;
+       
+        svg {
+          font-size: 1.2rem;
+        }
       }
     }
   }
