--- a/public/src/components/Welcome.css
+++ b/public/src/components/Welcome.css
@@ -1,4 +1,6 @@
 .Welcome_container{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,5 +13,18 @@
     }
     span{
         color: #4e00ff;
+    }
+}
+@media screen and (max-width : 425px) {
+    .Welcome_container{
+        img{
+            height: 10rem;
+        }
+        h1{
+            font-size: 1.3rem;
+        }
+        h3{
+            font-size: 1rem;
+        }
     }
 }
