--- a/public/src/pages/Chat.css
+++ b/public/src/pages/Chat.css
@@ -7,25 +7,28 @@
   gap: 1rem;
   align-items: center;
   background-color: #131324;
-}
-.inner_container {
-  height: 85vh;
-  width: 85vw;
-  background-color: #111010;
-  display: grid;
-  grid-template-columns: 25% 75%;
+  
+  .inner_container {
+    height: 85vh;
+    width: 85vw;
+    background-color: #00000076;
+    display: grid;
+    grid-template-columns: 25% 75%;
+  }
 }
 
 
-@media screen and (max-width : 768px){
+@media screen and (min-width: 424px)  and (max-width : 768px){
     .inner_container{
         grid-template-columns: 35% 65%;
     }
 }
-@media screen and (max-width : 425px){
+
+@media screen and (max-width : 425px) {
+  .outer_container{
     .inner_container{
-        height: 100%;
-        width: 100%;
-        grid-template-columns: 35% 65%;
+      width: 100%;
+      height: 100%;
     }
+  }
 }
